<resources>
    <string name="app_name">Q100 Aulas</string>
    <string name="name">Quem é você?</string>
    <string name="bt_oi">Oi</string>
    <string name="teste">oknok</string>
    <string name="novoTexto">Testando strings</string>
    <string name="aulas01_04">Aulas 01_04 - Oi</string>
    <string name="aulas05_11">Aulas 05_11 - MegaSena/Animações</string>
    <string name="aula12c">Aula 12 - Câmera</string>
    <string name="aula12w">Aula 12 - Web</string>
...
